--- a/css/style.css
+++ b/css/style.css
@@ -289,6 +289,12 @@ button {
   text-transform: uppercase;
 }
 
+#maps iframe {
+  margin-top: 20px;
+  width: 100%;
+  height: 400px;
+}
+
 #banner button {
   margin-top: 50px;
   transition: 0.2s;
@@ -493,4 +499,8 @@ p b {
   width: 150px;
   padding: 10px 0px;
   bottom: 0;
+}
+
+form {
+  margin: 30px 0px;
 }
