--- a/css/style.css
+++ b/css/style.css
@@ -457,15 +457,7 @@ p b {
 }
 
 .scroll {
-  display: flex;
-  flex-wrap: nowrap;
-  overflow-x: auto;
-  justify-content: space-evenly;
-  -webkit-overflow-scrolling: touch;
-  -ms-overflow-style: -ms-autohiding-scrollbar;
   width: 100%;
-  overflow-x: auto;
-  white-space: nowrap;
 }
 
 .tile {
@@ -503,4 +495,9 @@ p b {
 
 form {
   margin: 30px 0px;
+}
+
+.row {
+  margin: 0 !important;
+  margin-top: 20px !important;
 }
