--- a/css/style.css
+++ b/css/style.css
@@ -18,12 +18,12 @@ Yellow: #eddf1e
 
 @font-face {
   font-family: Title;
-  src: url("../font/Bredan.otf");
+  src: url('../font/Bredan.otf');
 }
 
 @font-face {
   font-family: Tekst;
-  src: url("../font/Gravity-Regular.otf");
+  src: url('../font/Gravity-Regular.otf');
 }
 
 .container {
@@ -115,7 +115,7 @@ p {
   color: #333;
 }
 
-#search input[type=text] {
+#search input[type='text'] {
   width: 100%;
   text-align: center;
   background: none;
@@ -134,7 +134,7 @@ p {
   padding: 15px 0px;
 }
 
-.policy>div {
+.policy > div {
   display: inline-block;
 }
 
@@ -155,7 +155,7 @@ p {
   margin-left: 0;
 }
 
-.container>.title-section {
+.container > .title-section {
   margin: 50px 0 20px 0;
 }
 
@@ -165,7 +165,7 @@ p {
 
 .bColor1::before {
   width: 35px;
-  content: " ";
+  content: ' ';
   position: absolute;
   border-top: solid 5px;
   left: 0;
@@ -175,7 +175,7 @@ p {
 
 .bColor2::before {
   width: 35px;
-  content: " ";
+  content: ' ';
   position: absolute;
   border-top: solid 5px;
   left: 0;
@@ -185,7 +185,7 @@ p {
 
 .bColor3::before {
   width: 35px;
-  content: " ";
+  content: ' ';
   position: absolute;
   border-top: solid 5px;
   left: 0;
@@ -225,7 +225,7 @@ p {
 #banner {
   width: 100%;
   height: 70vh;
-  background: url("../img/back2.jpg") fixed;
+  background: url('../img/lock-bg.png') center center;
   background-size: cover;
 }
 
@@ -243,7 +243,7 @@ p {
 }
 
 #banner h3:after {
-  content: "|";
+  content: '|';
   -webkit-animation: blink 1000ms ease-in-out infinite;
   animation: blink 1000ms ease-in-out infinite;
   color: #111;
@@ -353,7 +353,7 @@ button:hover {
 .sBanner1 {
   height: 300px;
   width: 100%;
-  background: url("../img/sBanner1.jpg") center center;
+  background: url('../img/sBanner1.jpg') center center;
   background-size: cover;
   color: #eee;
   text-align: center;
@@ -399,12 +399,12 @@ footer {
 }
 
 .facebook {
-  background: #3B5998;
+  background: #3b5998;
   color: white;
 }
 
 .twitter {
-  background: #55ACEE;
+  background: #55acee;
   color: white;
 }
 
@@ -518,6 +518,7 @@ form {
 
 .ndscode span {
   color: #eee;
-  font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  font-family: SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono',
+    'Courier New', monospace;
   font-size: 87.5%;
 }
