--- a/css/style.css
+++ b/css/style.css
@@ -236,11 +236,13 @@ p {
   text-align: center;
 }
 
-#banner h3 {
-  font-size: 6em;
+#banner h3, #banner h4 {
   color: #eee;
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
 }
+
+#banner h3 {font-size: 6em;}
+#banner h4 {font-size: 1.5em;}
 
 #banner h3:after {
   content: '|';
